welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: Unmatched closing brace '}' ignored here
 	} else if (isMom == true && isMorning == true ) {
        ^answerCell:5: error: ';' expected but 'else' found.
 	} else if (isMom == true && isMorning == true ) {
          ^